# DSL

./: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .flake8  .gitignore  .markdown-link-check.json  .mega-linter.yml  .mypy.ini  .pylintrc  .vscodeignore  CITATION.cff  README.md  codecov.yml  esbuild.mjs  langium-config.json  language-configuration.json  mkdocs.yml  package-lock.json  package.json  readthedocs.yml  release.config.cjs  tsconfig.base-svelte.json  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
Runner/: pyproject.toml
Runner/safeds_runner/: __init__.py
Runner/safeds_runner/codegen/: __init__.py  _operators.py
Runner/tests/codegen/: test_eager_and.py  test_eager_elvis.py  test_eager_or.py  test_safe_access.py
Runtime/: pyproject.toml
Runtime/safe-ds/: pyproject.toml
Runtime/safe-ds-runner/: pyproject.toml
Runtime/safe-ds-runner/safeds_runner/codegen/: __init__.py  _operators.py
Runtime/safe-ds-runner/tests/codegen/: test_eager_and.py  test_eager_elvis.py  test_eager_or.py  test_safe_access.py
Runtime/safe-ds/demo/: demo_Sprint_2.py
Runtime/safe-ds/plotting/: __init__.py  _plot_histogram.py
Runtime/safe-ds/safe_ds/: erros.py  test.py
Runtime/safe-ds/tests/: test_table.py
docs/: README.md  gen_ref_pages.py  mkdocs.yml  pyproject.toml  requirements.txt
docs/DSL/: README.md
docs/DSL/common/: README.md  comments.md  imports.md  packages.md  parameters.md  results.md  types.md  variance.md
docs/DSL/development/: how-to-add-a-new-language-concept.md
docs/DSL/pipeline-language/: README.md  expressions.md  pipelines.md  statements.md  steps.md
docs/DSL/stub-language/: README.md  annotations.md  classes.md  enumerations.md  global-functions.md
docs/DSL/tutorial/: README.md
docs/DSL/workflow-language/: README.md  expressions.md  statements.md  steps.md  workflows.md
docs/Development/: README.md  how-to-add-a-new-language-concept.md  how-to-prepare-a-release.md
docs/Stdlib/API/: README.md  safeds_lang.md  simpleml_lang.md
docs/Stdlib/python/: column.md  gen_ref_pages.py
docs/api/: SUMMARY.md
docs/api/math/: e.md  inf.md  nan.md  pi.md
docs/api/safeds/lang/: Any.md  (+25 more)
docs/development/: README.md  dsl-development-checklist.md  formatting-testing.md  generation-testing.md  grammar-testing.md  langium-quickstart.md  partial-evaluation-testing.md  release-checklist.md  scoping-testing.md  typing-testing.md  validation-testing.md
docs/development/testing/: call-graph-testing.md  code-actions-testing.md  formatting-testing.md  generation-testing.md  grammar-testing.md  partial-evaluation-testing.md  scoping-testing.md  typing-testing.md  validation-testing.md
docs/getting-started/: first-classification-program.md  first-program.md  first-regression-program.md  installation.md
docs/getting-started/snippets/: titanic-1.sds  titanic-2.sds
docs/language/: README.md
docs/language/common/: README.md  comments.md  imports.md  packages.md  parameters.md  results.md  types.md  variance.md
docs/language/pipeline-language/: README.md  expressions.md  pipelines.md  segments.md  statements.md  steps.md
docs/language/stub-language/: README.md  annotations.md  classes.md  enumerations.md  global-functions.md  type-parameters.md
docs/lexer/: pyproject.toml
docs/lexer/safe_ds_lexer/: __init__.py  _safe_ds_lexer.py
docs/pipeline-language/: README.md  comments.md  expressions.md  imports.md  packages.md  parameters.md  pipelines.md  results.md  segments.md  statements.md  types.md
docs/pipeline-language/expressions/: README.md  calls.md  chaining.md  indexed-accesses.md  lambdas.md  literals.md  member-accesses.md  operations.md  precedence.md  references.md  template-strings.md  type-casts.md
docs/pipeline-language/statements/: README.md  assignments.md  expression-statements.md  output-statements.md
docs/src/stylesheets/: extra.css
docs/stdlib/: README.md  SUMMARY.md  safeds_lang.md
docs/stub-language/: README.md  annotations.md  classes.md  comments.md  global-functions.md  imports.md  packages.md  parameters.md  results.md  types.md  variance.md
docs/stylesheets/: extra.css
(+3917 files in other folders)
