[tool.poetry]
name = "safe-ds-runner"
version = "1.0.0"
description = "Run Safe-DS code."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"
packages = [
    { include = "safeds_runner" },
]

[tool.poetry.dependencies]
python = "^3.10"
safe-ds = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
