[tool.poetry]
name = "safe-ds-dsl-docs"
version = "0.1.0"
description = "Documentation for the Safe-DS DSL"
authors = ["Lars Reimann <mail@larsreimann.com>"]
classifiers = ["Private :: Do not Upload"]
packages = [
    { include = "safe_ds_lexer", from = "src/lexer"},
]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^1.0.1"
mkdocs-glightbox = "^0.4.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-material = "^9.5.18"
mkdocs-same-dir = "^0.1.3"
pygments = "^2.17.2"

[tool.poetry.plugins."pygments.lexers"]
sds = "safe_ds_lexer:SafeDsLexer"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
