[tool.poetry]
name = "safe-ds-runner"
version = "1.0.0"
description = "Run Safe-DS code."
authors = ["Lars Reimann <mail@larsreimann.com>"]
license = "MIT"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
safe-ds = { path = "../safe-ds/", develop = true }

[tool.mypy]
ignore_missing_imports = true
disallow_untyped-calls = true
disallow_untyped-defs = true
disallow_incomplete-defs = true
disallow_untyped-decorators = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
